# SLAM

./: .gitignore  README.md
Lidar_SLAM/HW1/basicTransformStudy/: basic_transform_study.cpp
Lidar_SLAM/HW2/odom_calib/: odom_calib  odom_calib.cpp
Lidar_SLAM/HW2/odom_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
Lidar_SLAM/HW2/odom_ws/devel/lib/pkgconfig/: calib_odom.pc
Lidar_SLAM/HW2/odom_ws/devel/share/calib_odom/cmake/: calib_odomConfig.cmake
Lidar_SLAM/HW2/odom_ws/src/calib_odom/include/calib_odom/: Odom_Calib.hpp
Lidar_SLAM/HW2/odom_ws/src/calib_odom/src/: Odom_Calib.cpp  main.cpp
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/include/champion_nav_msgs/: ChampionNavLaserScan.h
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/lib/LaserUndistortion/: LaserUndistortion_node
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/lib/pkgconfig/: LaserUndistortion.pc  champion_nav_msgs.pc
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/share/LaserUndistortion/cmake/: LaserUndistortionConfig.cmake
Lidar_SLAM/HW3/LaserUndistortion_ws/devel/share/champion_nav_msgs/cmake/: champion_nav_msgs-msg-paths.cmake  champion_nav_msgsConfig.cmake
Lidar_SLAM/HW3/LaserUndistortion_ws/src/LaserUndistortion/: CMakeLists.txt
Lidar_SLAM/HW3/LaserUndistortion_ws/src/LaserUndistortion/src/: LidarMotionUndistortion.cpp
Lidar_SLAM/HW3/LaserUndistortion_ws/src/champion_nav_msgs/devel/: local_setup.sh  setup.sh
Lidar_SLAM/HW4/imlsMatcherProject/devel/: _setup_util.py  local_setup.sh  setup.sh
Lidar_SLAM/HW4/imlsMatcherProject/devel/lib/pkgconfig/: champion_nav_msgs.pc  imlsMatcher.pc
Lidar_SLAM/HW4/imlsMatcherProject/devel/share/champion_nav_msgs/cmake/: champion_nav_msgs-msg-extras.cmake  champion_nav_msgs-msg-paths.cmake  champion_nav_msgsConfig.cmake
Lidar_SLAM/HW4/imlsMatcherProject/src/imlsMatcher/: CMakeLists.txt
Lidar_SLAM/HW4/imlsMatcherProject/src/imlsMatcher/src/: imls_icp.cpp  main.cpp
Lidar_SLAM/HW5/gaussian_newton_ws/devel/: local_setup.sh  setup.sh
Lidar_SLAM/HW5/gaussian_newton_ws/devel/lib/gaussian_newton_scanmatcher/: gaussian_newton_node
Lidar_SLAM/HW5/gaussian_newton_ws/devel/lib/pkgconfig/: gaussian_newton_scanmatcher.pc
Lidar_SLAM/HW5/gaussian_newton_ws/src/gaussian_newton_scanmatcher/: CMakeLists.txt
Lidar_SLAM/HW5/gaussian_newton_ws/src/gaussian_newton_scanmatcher/src/: gaussian_newton_method.cpp  map_cspace.cpp
Lidar_SLAM/HW6/LSSLAMProject/devel/: local_setup.sh  setup.sh
Lidar_SLAM/HW6/LSSLAMProject/devel/lib/ls_slam/: ls_slam
Lidar_SLAM/HW6/LSSLAMProject/devel/lib/pkgconfig/: ls_slam.pc
Lidar_SLAM/HW6/LSSLAMProject/src/ls_slam/: CMakeLists.txt
Lidar_SLAM/HW6/LSSLAMProject/src/ls_slam/launch/: ls_slam.launch
Lidar_SLAM/HW6/LSSLAMProject/src/ls_slam/rviz/: rviz.rviz
Lidar_SLAM/HW6/LSSLAMProject/src/ls_slam/src/: g2o_optimize.cpp  gaussian_newton.cpp  main.cpp
Lidar_SLAM/HW7/OccupancyMappingProject/devel/: _setup_util.py  local_setup.sh  setup.sh
Lidar_SLAM/HW7/OccupancyMappingProject/devel/lib/occupancy_mapping/: occupancy_mapping
Lidar_SLAM/HW7/OccupancyMappingProject/devel/lib/pkgconfig/: occupancy_mapping.pc
Lidar_SLAM/HW7/OccupancyMappingProject/src/occupancy_mapping/: CMakeLists.txt  package.xml
Lidar_SLAM/HW7/OccupancyMappingProject/src/occupancy_mapping/launch/: occupancy_mapping.launch
Lidar_SLAM/HW7/OccupancyMappingProject/src/occupancy_mapping/src/: occupancy_mapping.cpp  readfile.cpp
Lidar_SLAM/HW7/OccupancyMappingProject/src/rviz/: rviz.rviz
Lidar_SLAM/HW8/A-LOAM/src/: laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  scanRegistration.cpp
Visual_SLAM/chap10/examples/: CMakeLists.txt  pose_graph_se3.cpp
Visual_SLAM/chap11/examples/: feature_training.cpp  loop_closure.cpp
Visual_SLAM/chap12/examples/: CMakeLists.txt  map.pcd  octomap_mapping.cpp
Visual_SLAM/chap13/: CMakeLists.txt
Visual_SLAM/chap13/include/: feature.h  frame.h  map.h  mappoint.h
Visual_SLAM/chap13/src/: frame.cpp  map.cpp
Visual_SLAM/chap3/examples/: plotTrajectory.cpp
Visual_SLAM/chap3/hw/: 6.cpp
Visual_SLAM/chap4/examples/: CMakeLists.txt
Visual_SLAM/chap5/examples/rgbd/: joinMap.cpp
Visual_SLAM/chap5/examples/stereo/: CMakeLists.txt
Visual_SLAM/chap6/examples/: CMakeLists.txt  gaussNewton.cpp
Visual_SLAM/chap6/hw/: 5_1.cpp
Visual_SLAM/chap7/examples/: feature_extraction.cpp
Visual_SLAM/chap8/examples/: direct_method.cpp  optical_flow.cpp
Visual_SLAM/chap9/examples/: FindCSparse.cmake  final.ply
Visual_SLAM/chap9/examples/include/: common.h
Visual_SLAM/chap9/examples/src/: bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp
chap10/examples/: pose_graph_SE3.cpp
chap11/examples/: CMakeLists.txt
chap12/examples/: pointcloud_mapping.cpp  surfel_mapping.cpp
chap13/app/: run_kitti_stereo.cpp
chap13/config/: default.yaml
chap13/include/: backend.h  camera.h  common.h  frontend.h
chap13/src/: backend.cpp  camera.cpp  feature.cpp  frontend.cpp  mappoint.cpp
chap2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h
chap3/examples/: CMakeLists.txt  eigenGeometry.cpp  eigenMatrix.cpp
chap3/hw/: 5.cpp  CMakeLists.txt
chap3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
chap3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
chap4/examples/: useSophus.cpp
chap4/useSophus/: CMakeLists.txt  useSophus.cpp
chap5/examples/rgbd/: CMakeLists.txt
chap5/examples/stereo/: stereo.cpp
chap5/joinMap/: CMakeLists.txt  joinMap.cpp
chap6/examples/: CMakeLists.txt  ceresFitting.cpp  g2oFitting.cpp
chap6/hw/: 5_2.cpp  CMakeLists.txt
chap7/: CMakeLists.txt  feature_extraction.cpp
chap7/examples/: CMakeLists.txt  epipolar_constraint_2d2d.cpp  icp_3d3d.cpp  pnp_3d2d.cpp
chap8/examples/: CMakeLists.txt
chap9/examples/: CMakeLists.txt
chap9/examples/src/: bundle_adjustment_g2o.cpp
learning_pcl/: CMakeLists.txt  test.txt
learning_pcl/src/: matrix_transform.cpp  moment_of_inertia.cpp  normal_estimation.cpp  pcd_write.cpp  resampling.cpp  segmentation.cpp  statistical_outlier.cpp  voxel_grid.cpp
(+14 files in other folders)
